# x2trace

./: .gitignore  Cargo.toml  README.md  bpftrace-sched-switch.py  chrome_trace.json  example.json  perf-sched-timehist.py  x2trace.awk
data/: bpftrace-sched-switch.jsonl  iftracer.out.239949354  iftracer.out.260479800  perf-sched-timehist.txt  pid-comm-cmdline.csv
ebpf/: bpftrace-stack.py
perfetto/: index.html  perfetto-server.py  pyproject.toml
perfetto/perfetto_server/: index.html  main.py
src/: chrome.rs  file.rs  iftrace.rs  lib.rs  main.rs  objdump.rs  proc_maps.rs
tools/: README.md  filter.py  outlier.py
