[package]
name = "x2trace"
version = "0.1.0"
authors = ["umaumax <umauma7083@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
byteorder = "1.4.3"
clap = "2.33.3"
cpp_demangle = "0.3.2"
env_logger = "0.8.4"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3.21"
