[package]
name = "x2trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
byteorder = "1.4.3"
clap = "3.1.5"
cpp_demangle = "0.3.5"
env_logger = "0.9.0"
log = "0.4.14"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
structopt = "0.3.26"
